--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,67 @@ input[type="search"] {
   .searchForm__group .formInput {
     flex-grow: 1;
   }
+
+  /* 모바일 메인메뉴 제어버튼 */
+
+
+.buttonWrapper {
+    padding: var(--spacing-xxs);
+    overflow: hidden;
+    position: absolute;
+    top: 3.75rem;
+    right: var(--spacing-lg);
+    transform: translate(-0.25rem, -0.25rem);
+  }
+
+  .button--burger {
+    position: relative;
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .button--burger:focus {
+    outline-offset: 2px;
+  }
+
+  [class *= "button--burgerBar"] {
+    position: absolute;
+    width: 100%;
+    height: 20%;
+    background: var(--white);
+    border-radius: 0.25rem;
+    left: 0;
+    transition: all 200ms;
+  }
+
+  .button--burgerBarTop {
+    top: 0;
+  }
+
+  .button--burgerBarMiddle {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .button--burgerBarBottom {
+    top: 100%;
+    transform: translateY(-100%);
+  }
+
+  .button--burger.is--active .button--burgerBarMiddle {
+    transform: translate(-150%, -50%);
+  }
+
+  .button--burger.is--active .button--burgerBarTop {
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+  }
+
+  .button--burger.is--active .button--burgerBarBottom {
+    top: 50%;
+    transform: translateY(-50%) rotate(-45deg);
+  }
+  /* 모바일 메뉴 제어 버튼 종료 */
 }
 
 /* 데스크탑 디바이스 (Desktop Device) */
@@ -112,7 +173,6 @@ input[type="search"] {
     max-width: var(--container-width);
     margin-left: auto;
     margin-right: auto;
-    background-color: gold;
   }
 
   /* 데스크탑 로고 */
@@ -130,6 +190,41 @@ input[type="search"] {
   .searchForm__group .formInput {
     width: 25rem;
   }
+
+  /* 데스크탑 메인메뉴 제어버튼 */
+  .button--burger {
+    display: none;
+  }
+
+  /* 데스크탑 메인메뉴 */
+
+  .menu {
+    background-color: var(--secondary-color);
+  }
+
+  .menu__list {
+    height: 7rem;
+    max-width: var(--container-width);
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .menu__item {
+    padding: var(--spacing-sm) 0;
+  }
+
+  .menu__link {
+    display: block;
+    color: white;
+    text-shadow: 1px 1px 0 var(--black), -1px -1px 0 var(--black);
+    font-weight: 700;
+    font-size: 1.1rem;
+    padding: var(--spacing-base) var(--spacing-lg);
+  }
+
 }
 
 /* 고해상도 배경이미지 미디어쿼리 */
