--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,13 @@ input[type="search"] {
   border: 1px solid currentColor;
 }
 
+/* 공통 메인 메뉴 */
+.menu__link {
+  display: block;
+  font-size: var(--text-md);
+  font-weight: 700;
+}
+
 /* 모바일 디바이스 (Mobile Device) */
 @media (min-width: 320px) and (max-width: 768px) {
   /* 모바일 헤더 */
@@ -105,9 +112,7 @@ input[type="search"] {
   }
 
   /* 모바일 메인메뉴 제어버튼 */
-
-
-.buttonWrapper {
+  .buttonWrapper {
     padding: var(--spacing-xxs);
     overflow: hidden;
     position: absolute;
@@ -126,7 +131,10 @@ input[type="search"] {
     outline-offset: 2px;
   }
 
-  [class *= "button--burgerBar"] {
+  .button--burgerBarTop,
+  .button--burgerBarMiddle,
+  .button--burgerBarBottom {
+    /* pointer-events: none; */
     position: absolute;
     width: 100%;
     height: 20%;
@@ -150,20 +158,45 @@ input[type="search"] {
     transform: translateY(-100%);
   }
 
-  .button--burger.is--active .button--burgerBarMiddle {
-    transform: translate(-150%, -50%);
-  }
-
   .button--burger.is--active .button--burgerBarTop {
     top: 50%;
     transform: translateY(-50%) rotate(45deg);
+  }
+
+  .button--burger.is--active .button--burgerBarMiddle {
+    transform: translate(-150%, -50%);
   }
 
   .button--burger.is--active .button--burgerBarBottom {
     top: 50%;
     transform: translateY(-50%) rotate(-45deg);
   }
-  /* 모바일 메뉴 제어 버튼 종료 */
+
+  /* 모베알 메인 메뉴 */
+  .menu__list {
+    background: var(--accent-opacity-color);
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 70%;
+    height: 100vh;
+    backdrop-filter: blur(4px);
+    padding: var(--spacing-lg);
+    transform: translateX(-150%);
+  }
+
+  .menu__item {
+    border-bottom: 1px solid var(--silver);
+  }
+
+  .menu__link {
+    padding: var(--spacing-xs);
+  }
+
+  .menu.is--active .menu__list {
+    transform: none;
+  }
 }
 
 /* 데스크탑 디바이스 (Desktop Device) */
@@ -196,35 +229,29 @@ input[type="search"] {
     display: none;
   }
 
-  /* 데스크탑 메인메뉴 */
-
+  /* 데스크탑 메인 메뉴 */
   .menu {
-    background-color: var(--secondary-color);
+    background: var(--secondary-color);
+    padding: var(--spacing-base) var(--spacing-lg);
   }
 
   .menu__list {
-    height: 7rem;
     max-width: var(--container-width);
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
   }
 
-  .menu__item {
-    padding: var(--spacing-sm) 0;
-  }
-
   .menu__link {
-    display: block;
-    color: white;
-    text-shadow: 1px 1px 0 var(--black), -1px -1px 0 var(--black);
+    padding: var(--spacing-md) var(--spacing-lg);
+    color: var(--white);
+    font-size: 1.2rem;
     font-weight: 700;
-    font-size: 1.1rem;
-    padding: var(--spacing-base) var(--spacing-lg);
+    text-shadow: 1px 1px 0 var(--black), -1px -1px 0 var(--black);
   }
-
 }
 
 /* 고해상도 배경이미지 미디어쿼리 */
