--- a/styles/style.css
+++ b/styles/style.css
@@ -33,12 +33,12 @@
   flex-flow: row nowrap;
   justify-content: flex-end;
 }
-
+/* 
 /* 공통 검색 폼 */
 input[type="search"] {
   -webkit-appearance: none;
   appearance: none;
-}
+} */
 
 .searchForm__group {
   display: flex;
