--- a/styles/style.css
+++ b/styles/style.css
@@ -33,13 +33,12 @@
   flex-flow: row nowrap;
   justify-content: flex-end;
 }
-/* 공통 검색 폼 */
-/* 
 
+/* 공통 검색 폼 */
 input[type="search"] {
   -webkit-appearance: none;
   appearance: none;
-} */
+}
 
 .searchForm__group {
   display: flex;
@@ -91,6 +90,34 @@ input[type="search"] {
   display: block;
   font-size: var(--text-md);
   font-weight: 700;
+}
+
+/* 공통 메인 콘텐츠 */
+.appMain {
+  display: grid;
+  gap: var(--spacing-base);
+  padding: var(--spacing-base) var(--spacing-lg);
+}
+
+/* 공통 추천 서적 */
+.book {
+  background: lightgreen;
+}
+/* 공통 새소식 */
+.news {
+  background: yellow;
+}
+/* 공통 게시판 */
+.board {
+  background: lightsalmon;
+}
+/* 공통 인기 사이트 */
+.favorite {
+  background: skyblue;
+}
+/* 공통 트위터 */
+.twitter {
+  background: burlywood;
 }
 
 /* 모바일 디바이스 (Mobile Device) */
@@ -185,6 +212,7 @@ input[type="search"] {
     backdrop-filter: blur(4px);
     padding: var(--spacing-lg);
     transform: translateX(-150%);
+    /* transition: all 600ms; */
   }
 
   .menu__item {
@@ -197,6 +225,35 @@ input[type="search"] {
 
   .menu.is--active .menu__list {
     transform: none;
+  }
+
+  /* 모바일 메인 콘텐츠 */
+  .appMain {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "book"
+    "news"
+    "board"
+    "favorite"
+    "twitter";
+  }
+
+  .news {
+    grid-area: news
+  }
+
+  .book {
+    grid-area: book;
+  }
+
+  .twitter {
+    grid-area: twitter;
+  }
+  .favorite {
+    grid-area: favorite;
+  }
+  .board {
+    grid-area: board;
   }
 }
 
@@ -250,8 +307,37 @@ input[type="search"] {
     padding: var(--spacing-md) var(--spacing-lg);
     color: var(--white);
     font-size: 1.2rem;
-    font-weight: 700;
     text-shadow: 1px 1px 0 var(--black), -1px -1px 0 var(--black);
+  }
+
+  /* 데스크탑 메인 콘텐츠 */
+  .appMain {
+    max-width: var(--container-width);
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-areas:
+      "news news news news news news news news news news news news"
+      "book book book book twitter twitter twitter twitter twitter favorite favorite favorite"
+      "book book book book . board board board board board board board";
+  }
+
+  .news {
+    grid-area: news
+  }
+
+  .book {
+    grid-area: book;
+  }
+
+  .twitter {
+    grid-area: twitter;
+  }
+  .favorite {
+    grid-area: favorite;
+  }
+  .board {
+    grid-area: board;
   }
 }
 
