--- a/styles/style.css
+++ b/styles/style.css
@@ -99,25 +99,48 @@ input[type="search"] {
   padding: var(--spacing-base) var(--spacing-lg);
 }
 
+/* 공통 메인 콘텐츠 섹션 제목 */
+[class*="__title"]{
+  background-color: gold;
+  font-size: 1.125rem;
+  font-weight: 700;
+}
+
+[class*="__enTitle"]{
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+
+
 /* 공통 추천 서적 */
 .book {
   background: lightgreen;
+  grid-area: book;
 }
+
 /* 공통 새소식 */
 .news {
   background: yellow;
+  grid-area: news;
 }
+
 /* 공통 게시판 */
 .board {
   background: lightsalmon;
+  grid-area: board;
 }
+
 /* 공통 인기 사이트 */
 .favorite {
   background: skyblue;
+  grid-area: favorite;
 }
+
 /* 공통 트위터 */
 .twitter {
   background: burlywood;
+  grid-area: twitter;
 }
 
 /* 모바일 디바이스 (Mobile Device) */
@@ -231,29 +254,12 @@ input[type="search"] {
   .appMain {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    grid-template-areas: "book"
-    "news"
-    "board"
-    "favorite"
-    "twitter";
-  }
-
-  .news {
-    grid-area: news
-  }
-
-  .book {
-    grid-area: book;
-  }
-
-  .twitter {
-    grid-area: twitter;
-  }
-  .favorite {
-    grid-area: favorite;
-  }
-  .board {
-    grid-area: board;
+    grid-template-areas:
+      "book"
+      "news"
+      "board"
+      "favorite"
+      "twitter";
   }
 }
 
@@ -312,33 +318,15 @@ input[type="search"] {
 
   /* 데스크탑 메인 콘텐츠 */
   .appMain {
+    border: 5px solid red;
     max-width: var(--container-width);
     margin-left: auto;
     margin-right: auto;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-areas:
-      "news news news news news news news news news news news news"
-      "book book book book twitter twitter twitter twitter twitter favorite favorite favorite"
-      "book book book book . board board board board board board board";
-  }
-
-  .news {
-    grid-area: news
-  }
-
-  .book {
-    grid-area: book;
-  }
-
-  .twitter {
-    grid-area: twitter;
-  }
-  .favorite {
-    grid-area: favorite;
-  }
-  .board {
-    grid-area: board;
-  }
+    grid-template-rows: auto;
+    grid-template-areas: "news news news news news news news news news news news news"
+                         "book book book book twitter twitter twitter twitter twitter favorite favorite favorite"
+                         "book book book book . board board board board board board board";
 }
 
 /* 고해상도 배경이미지 미디어쿼리 */
