--- a/styles/base.css
+++ b/styles/base.css
@@ -32,3 +32,34 @@ video {
   width: 100%;
   height: auto;
 }
+
+/* 반응형 Iframe */
+
+/* 56.25% */
+
+.iframeWrapper{
+  background-color: salmon;
+  aspect-ratio: 16/9;
+}
+  /* 
+  position: relative;
+  height: 0 !important;
+  
+}
+
+.iframeRatio-16-9 {
+  padding-bottom: 56.25%;
+}
+.iframeRatio-21-9 {
+  padding-bottom: 42.857142857142854;
+}
+.iframeRatio-4-3 {
+  padding-bottom: 75%;
+}
+*/
+.iframeWrapper iframe{
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+} 
+
